--- a/model.ipynb
+++ b/model.ipynb
@@ -2,127 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.850975\n",
-      "Confusion Matrix:\n",
-      " [[33295   705]\n",
-      " [ 5256   744]]\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.86      0.98      0.92     34000\n",
-      "           1       0.51      0.12      0.20      6000\n",
-      "\n",
-      "    accuracy                           0.85     40000\n",
-      "   macro avg       0.69      0.55      0.56     40000\n",
-      "weighted avg       0.81      0.85      0.81     40000\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['rf_fraud_model_weighted_smote.joblib']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "import joblib\n",
-    "\n",
-    "# Load dataset\n",
-    "df = pd.read_csv(\"credit_card_fraud_200k.csv\")\n",
-    "\n",
-    "# Encode categorical feature\n",
-    "df['Device_Type'] = LabelEncoder().fit_transform(df['Device_Type'])\n",
-    "\n",
-    "# Define feature weights (raw value for Merchant_Risk_Score, i.e. no weight applied)\n",
-    "feature_weights = {\n",
-    "    'Time': 3.0,\n",
-    "    'Amount': 3.0,\n",
-    "    'Distance_From_Last_Transaction': 3.0,\n",
-    "    'Avg_Transaction_Value': 3.0,\n",
-    "    'Num_Transactions_Past_24H': 1.5,\n",
-    "    'Device_Type': 0.8,\n",
-    "    'Is_International': 0.5,\n",
-    "    'Merchant_Risk_Score': 1.0,  # Will not be scaled below\n",
-    "    'Previous_Fraudulent_Transactions': 1.0\n",
-    "}\n",
-    "\n",
-    "# Split features and target\n",
-    "X = df.drop('Fraud', axis=1)\n",
-    "y = df['Fraud']\n",
-    "\n",
-    "# Apply feature weights (excluding Merchant_Risk_Score)\n",
-    "X_weighted = X.copy()\n",
-    "for feature, weight in feature_weights.items():\n",
-    "    if feature != 'Merchant_Risk_Score':\n",
-    "        X_weighted[feature] *= weight\n",
-    "\n",
-    "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_weighted, y, test_size=0.2, random_state=42, stratify=y\n",
-    ")\n",
-    "\n",
-    "# Apply SMOTE for oversampling minority class\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
-    "\n",
-    "# Train Random Forest model\n",
-    "rf_model = RandomForestClassifier(\n",
-    "    n_estimators=100,\n",
-    "    max_depth=10,\n",
-    "    class_weight='balanced',\n",
-    "    random_state=42\n",
-    ")\n",
-    "\n",
-    "rf_model.fit(X_train_resampled, y_train_resampled)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred = rf_model.predict(X_test)\n",
-    "y_proba = rf_model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "# Evaluation metrics\n",
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
-    "report = classification_report(y_test, y_pred)\n",
-    "\n",
-    "print(\"Accuracy:\", acc)\n",
-    "print(\"Confusion Matrix:\\n\", cm)\n",
-    "print(\"Classification Report:\\n\", report)\n",
-    "\n",
-    "# Save model\n",
-    "joblib.dump(rf_model, 'rf_fraud_model_weighted_smote.joblib')\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\arjun\\OneDrive\\Documents\\CreditCardF\\.conda\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [15:37:50] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "c:\\Users\\arjun\\OneDrive\\Documents\\CreditCardF\\.conda\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [22:04:45] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -132,19 +19,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7789\n",
+      "Accuracy: 0.86095\n",
       "Confusion Matrix:\n",
-      " [[26889  7111]\n",
-      " [ 1733  4267]]\n",
+      " [[16329   671]\n",
+      " [ 2110   890]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.94      0.79      0.86     34000\n",
-      "           1       0.38      0.71      0.49      6000\n",
+      "           0       0.89      0.96      0.92     17000\n",
+      "           1       0.57      0.30      0.39      3000\n",
       "\n",
-      "    accuracy                           0.78     40000\n",
-      "   macro avg       0.66      0.75      0.67     40000\n",
-      "weighted avg       0.85      0.78      0.80     40000\n",
+      "    accuracy                           0.86     20000\n",
+      "   macro avg       0.73      0.63      0.66     20000\n",
+      "weighted avg       0.84      0.86      0.84     20000\n",
       "\n"
      ]
     },
@@ -154,7 +41,7 @@
        "['xgb_fraud_model_weighted.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,52 +52,45 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "import xgboost as xgb\n",
     "import joblib\n",
     "\n",
-    "# Load dataset\n",
     "df = pd.read_csv(\"credit_card_fraud_200k.csv\")\n",
     "\n",
-    "# Encode categorical feature\n",
     "df['Device_Type'] = LabelEncoder().fit_transform(df['Device_Type'])\n",
     "\n",
-    "# Define feature weights (raw value for Merchant_Risk_Score, i.e. no weight applied)\n",
     "feature_weights = {\n",
-    "    'Time': 2.0,\n",
+    "    'Time': 1.0,\n",
     "    'Amount': 4.0,\n",
     "    'Distance_From_Last_Transaction': 4.0,\n",
-    "    'Avg_Transaction_Value': 3.0,\n",
+    "    'Avg_Transaction_Value': 2.5,\n",
     "    'Num_Transactions_Past_24H': 1.5,\n",
     "    'Device_Type': 0.8,\n",
-    "    'Is_International': 0.5,\n",
-    "    'Merchant_Risk_Score': 1.0,  # Raw value used\n",
+    "    'Is_International': 1.5,\n",
+    "    'Merchant_Risk_Score': 2.5,\n",
     "    'Previous_Fraudulent_Transactions': 1.0\n",
     "}\n",
     "\n",
-    "# Split features and target\n",
     "X = df.drop('Fraud', axis=1)\n",
     "y = df['Fraud']\n",
     "\n",
-    "# Apply feature weights (excluding Merchant_Risk_Score)\n",
     "X_weighted = X.copy()\n",
     "for feature, weight in feature_weights.items():\n",
     "    if feature != 'Merchant_Risk_Score':\n",
     "        X_weighted[feature] *= weight\n",
     "\n",
-    "# Train-test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_weighted, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    X_weighted, y, test_size=0.1, random_state=42, stratify=y\n",
     ")\n",
     "\n",
-    "# Calculate scale_pos_weight for imbalance\n",
-    "scale_pos_weight = sum(y_train == 0) / sum(y_train == 1)\n",
+    "sm = SMOTE(random_state=42)\n",
+    "X_train_res, y_train_res = sm.fit_resample(X_train, y_train)\n",
     "\n",
-    "# Define and train XGBoost model\n",
     "xgb_model = xgb.XGBClassifier(\n",
     "    n_estimators=300,\n",
     "    learning_rate=0.05,\n",
     "    max_depth=6,\n",
-    "    scale_pos_weight=scale_pos_weight,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
     "    use_label_encoder=False,\n",
@@ -218,13 +98,11 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_model.fit(X_train_res, y_train_res)\n",
     "\n",
-    "# Predict and evaluate\n",
     "y_pred = xgb_model.predict(X_test)\n",
     "y_proba = xgb_model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# Evaluation metrics\n",
     "acc = accuracy_score(y_test, y_pred)\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "report = classification_report(y_test, y_pred)\n",
@@ -233,8 +111,8 @@
     "print(\"Confusion Matrix:\\n\", cm)\n",
     "print(\"Classification Report:\\n\", report)\n",
     "\n",
-    "# Save model\n",
-    "joblib.dump(xgb_model, 'xgb_fraud_model_weighted.joblib')\n"
+    "joblib.dump(xgb_model, \"xgb_fraud_model_weighted.joblib\")\n",
+    "\n"
    ]
   },
   {
